<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3GV</string>
    <string name="_authorization">Unauthorized, please use after authorized.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="startService">Login</string>
    <string name="storageManagement">Storage</string>
    <string name="mobileSureillance">MCU</string>
    <string name="systemSetting">Setting</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="puid_invalid">PUID is invalid(should be a number of 18 digits).</string>
    <string name="addr_unreachable">Address or port is incorrect.</string>
    <string name="set">Setting</string>
    <string name="pleaseCheckSDCard">Please check SD card.</string>
    <string name="noMCU">MCU is not installed.</string>
    <string name="default_resolution">Default resolution</string>
    <string name="camera_init_error">Failed to init camera!</string>
    <string name="noMCU2replay">MCU is not installed, unable to replay.</string>
    <string name="init_camera_error_try_other_size">Failed to start camera, please try another size.</string>
    <string name="unkown_version">Unknown version</string>
    <string name="crearo_company">Anhui Crearo Technology Co.,Ltd</string>
    <string name="crearo_slogan">Expert of wireless video, flagship of mobile surveillance</string>
    <string name="crearo_weisite">Website: www.crearo.com</string>
    <string name="switch2work">A request flow command, need to switch to video browsing interface?</string>
    <string name="remember">Remember the choice and no longer prompt</string>
    <string name="other">Other</string>
    <string name="server">Server param</string>
    <string name="serverAddr">Address</string>
    <string name="serverPort">Port</string>
    <string name="password">Password</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="fix_addr">Penetrate gateway</string>
    <string name="fix_addr_desc">Login by penetrating gateway</string>
    <string name="pu_param">Device param</string>
    <string name="pu_name">Device name</string>
    <string name="pu_desc">Device description</string>
    <string name="camera">Camera</string>
    <string name="camera_param">Camera param</string>
    <string name="baseparam">Basic</string>
    <string name="camera_name">Camera name</string>
    <string name="video_param">Video param</string>
    <string name="camera_resolution">Resolution</string>
    <string name="camera_frameRate">Frame rate</string>
    <string name="camera_quality">Quality</string>
    <string name="va_sync">Play synchronously</string>
    <string name="record">Recording</string>
    <string name="recordTime">Video length (minutes)</string>
    <string name="overtime_newfile">Automatically change file when one file exceeding the length of video time</string>
    <string name="newfile">Automatically change file</string>
    <string name="use_common_mode_rending">Replay in common mode</string>
    <string name="_login_error">Login failed, information: %s</string>
    <string name="logining">Logining…</string>
    <string name="_unkown_error">Unknown error,error code: %s</string>
    <string name="key_video_portrait">Vertical screen capture</string>
    <string name="sure_2_exit">Are you sure you want to exit?</string>
    <string name="hold_to_talk">Hold to talk</string>
    <string name="release_to_listen">Release to listen</string>
    <string name="auto_endcall_summary">Automatically shield incoming calls in video preview interface</string>
    <string name="auto_endcall">Shield incoming call</string>
    <string name="press_talk_summary">Press the button to talk when there is no earphone in talkback condition</string>
    <string name="press_talk">Talkback mode</string>
    <string name="press_again_to_exit">Press again to go back</string>
    <string name="connection_reset">The connection was reset</string>
    <string name="compatibility_mode">Compatibility encode</string>
</resources>