<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:singleLine="true"
        android:text="@string/unkown_version" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dip"
        android:singleLine="true"
        android:text="@string/crearo_company" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/crearo_slogan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="15dip"
        android:autoLink="web"
        android:singleLine="true"
        android:text="@string/crearo_weisite" />

</LinearLayout>